--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
+.DS_Store
+.env
+/.sass-cache/
+/bower_components/
+/node_modules/
+/build/
 .idea/
-.sass-cache/
-build/
-demos/local/
+/demos/local
+/coverage
