--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-	"private": true,
-	"name": "o-fonts",
-	"devDependencies": {
-		"eslint": "^7.9.0",
-		"eslint-config-origami-component": "^2.1.0",
-		"origami-ci-tools": "^2.1.0",
-		"stylelint-config-origami-component": "^1.0.4"
-	}
+    "name": "o-fonts",
+    "devDependencies": {
+        "eslint": "^7.9.0",
+        "eslint-config-origami-component": "^2.1.0",
+        "origami-ci-tools": "^2.1.0",
+        "stylelint-config-origami-component": "^1.0.4"
+    },
+    "main": "main.js",
+    "peerDependencies": {
+        "@financial-times/o-brand": "^3.2.5"
+    },
+    "description": "Loads CSS declarations for FT web fonts. Does not include font assets.",
+    "publishConfig": {
+        "registry": "http://localhost:4873"
+    },
+    "version": "5.0.0-0"
 }
