--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "o-fonts",
+    "name": "@financial-times/o-fonts",
     "devDependencies": {
         "eslint": "^7.9.0",
         "eslint-config-origami-component": "^2.1.0",
