--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "origami-ci-tools": "^2.1.0",
         "stylelint-config-origami-component": "^1.0.4"
     },
-    "main": "main.js",
+    "browser": "main.js",
     "peerDependencies": {
         "@financial-times/o-brand": "^100.0.0-6"
     },
