--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
     "name": "@financial-times/o-fonts",
+    "version": "100.0.0-7",
+    "description": "Loads CSS declarations for FT web fonts. Does not include font assets.",
+    "browser": "main.js",
     "devDependencies": {
         "eslint": "^7.9.0",
         "eslint-config-origami-component": "^2.1.0",
         "origami-ci-tools": "^2.1.0",
         "stylelint-config-origami-component": "^1.0.4"
     },
-    "browser": "main.js",
     "peerDependencies": {
         "@financial-times/o-brand": "^100.0.0-7"
     },
-    "description": "Loads CSS declarations for FT web fonts. Does not include font assets.",
     "publishConfig": {
         "registry": "http://localhost:4873"
-    },
-    "version": "100.0.0-7"
+    }
 }
