add licence, type, export-map, and type definitions

--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
     "name": "@financial-times/o-fonts",
     "version": "100.0.0-7",
     "description": "Loads CSS declarations for FT web fonts. Does not include font assets.",
-    "browser": "main.js",
+    "license": "MIT",
+    "type": "module",
+    "exports": {
+        ".": {
+            "browser": "./main.js"
+        }
+    },
+    "browser": "./main.js",
+    "types": "types",
     "devDependencies": {
         "eslint": "^7.9.0",
         "eslint-config-origami-component": "^2.1.0",
